main/default/objects/TML_Question__c/TML_Question__c.object-meta.xml
<CustomObject>
    <description>Question template. Records in this object can be used to import questions to Question Lines</description>
    <label>TML Question</label>
    <nameField>
        <displayFormat>TLQ-{0000000}</displayFormat>
        <label>TML Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TML Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>