main/default/objects/TML_Question__c/fields/Correct_Number__c.field-meta.xml
<CustomField>
    <fullName>Correct_Number__c</fullName>
    <label>Correct Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>