main/default/objects/TML_Question__c/fields/Description_RTA__c.field-meta.xml
<CustomField>
    <fullName>Description_RTA__c</fullName>
    <label>Description RTA</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>