main/default/objects/TML_Question__c/validationRules/AnswerSequence_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AnswerSequence_Required</fullName>
    <active>true</active>
    <description>Display an error message when a type that requires an answer sequence chose and no answer sequence is defined</description>
    <errorConditionFormula>(TEXT( Type__c )==&quot;SelectOneQuestion&quot; || TEXT( Type__c )==&quot;SelectMultipleQuestion&quot;) &amp;&amp;  ISBLANK(TML_Answer_Sequence__c)</errorConditionFormula>
    <errorMessage>You must specify an answer sequence for this type of question</errorMessage>
</ValidationRule>