main/default/objects/TML_Question__c/validationRules/CorrectBoolean_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectBoolean_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Correct_Boolean__c)) &amp;&amp;  TEXT(Type__c) == &quot;Boolean&quot;</errorConditionFormula>
    <errorMessage>You must specify a correct boolean value when defining a Boolean type of question</errorMessage>
</ValidationRule>